# prisma-check

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build_release.yml  lint_test.yml
cli/: Cargo.toml
cli/src/: main.rs  schema.prisma
lints/: Cargo.toml
lints/src/: lib.rs  require_snake_case_map.rs  require_timestamps.rs
src/: main.rs
