[package]
name = "prisma_lint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cruet = "0.13.3"
psl = { git = "https://github.com/prisma/prisma-engines.git", rev = "8fde8fe" }
lints = { path = "./lints" }

[workspace]
members = [
  "lints"
]
