[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
psl = { git = "https://github.com/prisma/prisma-engines.git", rev = "8fde8fe" }
clap = { version = "4.1.8", features = ["derive"] }
lints = { path = "../lints" }
